# esp32-nat-router-and-temperature-controller

./: .gitignore  CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.esp32dev
components/cmd_nvs/: cmd_nvs.c
components/ssd1306/: font8x8_basic.h  ssd1306.c
components/temp_ctrl/: CMakeLists.txt  temp_ctrl.c  temp_ctrl.h
main/: CMakeLists.txt  cmd_decl.h  esp32_nat_router.c  http_client.c  http_server.c
